--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ languageName = "English"
     subtitle = "I am Kartik Verma, student of Computer Engineering. I write about databases, cloud and tv series."
   [params.social]
     GitHub = "verma-kartik"
-    Linkedin = "https://www.linkedin.com/in/kartik-verma-058/"
+    Linkedin = "kartik-verma-058"
     Spotify = ""
     Bandcamp = ""
     Zhihu = ""
