--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ languageName = "English"
 
 [params]
   # site default theme ["auto", "light", "dark"]
-  defaultTheme = "dark"
+  defaultTheme = "light"
   # website title for Open Graph and Twitter Cards
   title = "Kartik Verma"
   # website description for RSS, SEO, Open Graph and Twitter Cards
@@ -102,25 +102,18 @@ languageName = "English"
   [params.search]
     enable = true
     # type of search engine ["lunr", "algolia"]
-    # 搜索引擎的类型 ["lunr", "algolia"]
     type = "algolia"
     # max index length of the chunked content
-    # 文章内容最长索引长度
     contentLength = 4000
     # placeholder of the search bar
-    # 搜索框的占位提示语
     placeholder = ""
     # max number of results length
-    # 最大结果数目
     maxResultLength = 10
     # snippet length of the result
-    # 结果内容片段长度
     snippetLength = 30
     # HTML tag name of the highlight part in results
-    # 搜索结果中高亮部分的 HTML 标签
     highlightTag = "em"
     # whether to use the absolute URL based on the baseURL in search index
-    # 是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
     [params.search.algolia]
       index = ""
